fixed dark mode

--- a/public/css/f-checklist-view.css
+++ b/public/css/f-checklist-view.css
@@ -69,7 +69,7 @@
 
     gap: 15px;
 
-    background-color: #FFFFFF;
+    background-color: var(--itemLight);
     
     border-radius: 16px;
 }
